API'S de Checkout e Pedidos
